--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-main {
-    background-color: hsl(227, 52%, 51%);
-}
 body{
-    background-color: rgb(0, 66, 96);
+   background-color: rgb(203, 189, 172);
 }
-body{
-    background-image: url();
-}
+
+
+ h1{
+    font-family: fantasy;
+    color: blue;
+    font-size: 150px;
+
+ }
+   
