--- a/leandro 2/produtos.css
+++ b/leandro 2/produtos.css
@@ -1,6 +1,11 @@
 header{
     background-color: rgb(77, 76, 139);
 }
+
+nav{
+    display: inline; 
+    margin: 0 0 0 15px;
+}
 nav li{
     display: inline;
     margin: 0 0 0 15px;
@@ -11,3 +16,8 @@ nav li{
     text-decoration: none;
 }
 
+img {
+    top: 25px; 
+    position: absolute;
+    width: 35px;
+}
