--- a/leandro 2/produtos.css
+++ b/leandro 2/produtos.css
@@ -17,7 +17,19 @@ nav li{
 }
 
 img {
-    top: 25px; 
+    top: 6px; 
     position: absolute;
-    width: 35px;
+    width: 50px;
+}
+
+.caixa {
+    position: relative;
+    width: 500px;
+    margin: 0% auto;
+}
+
+nav {
+    position: absolute;
+    top: 5px;
+    right: 80px ;
 }
